nucleopa-application/src/main/resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nucleopa-service
  name: nucleopa-service
  namespace: corporativo
spec:
  ports:
  - name: 8085-tcp
    port: 8085
    protocol: TCP
    targetPort: 8085
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    deploymentconfig: nucleopa-service
